--- a/app/src/main/res/layout/activity_solo_music.xml
+++ b/app/src/main/res/layout/activity_solo_music.xml
@@ -77,21 +77,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_alignStart="@+id/imageView"
+        android:layout_alignStart="@+id/prev_button"
         android:layout_alignTop="@+id/mute"
-        android:layout_marginStart="6dp"
-        android:layout_marginTop="7dp"
-        app:srcCompat="@drawable/ic_repeat_black_24dp" />
+        android:background="@drawable/ic_repeat_black_24dp" />
 
     <ImageView
         android:id="@+id/mute"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/imageView"
-        android:layout_alignTop="@+id/musicArtist"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="27dp"
-        app:srcCompat="@drawable/ic_volume_mute_black_24dp" />
+        android:layout_below="@+id/musicName"
+        android:layout_marginTop="45dp"
+        android:background="@drawable/ic_volume_up_black_24dp" />
 
 
 </RelativeLayout>
