--- a/app/src/main/res/layout/image_fragment.xml
+++ b/app/src/main/res/layout/image_fragment.xml
@@ -9,6 +9,6 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="21dp"
-        android:background="@drawable/image" />
+        android:background="@drawable/image2" />
 
 </RelativeLayout>
