--- a/app/src/main/res/layout/lyric_view_layout.xml
+++ b/app/src/main/res/layout/lyric_view_layout.xml
@@ -8,7 +8,7 @@
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
-
+    android:background="@color/translucent_red"
     >
 
     <TextView
@@ -17,7 +17,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:text="Title"
-        android:textSize="30sp" />
+        android:textColor="@color/yellow"
+         />
 
 
 </android.support.v7.widget.CardView>
